修改book
